<resources>
    <string name="test">Test</string>

    <!--Bottom Nav-->
    <string name="nav_home">Beranda</string>
    <string name="nav_activity">Aktifitas</string>
    <string name="nav_balance">Saldo</string>
    <string name="nav_profile">Profil</string>
    <string name="title_article">Tittle nya</string>
    <string name="nav_list">Apple News</string>
    <string name="nav_top">Absensi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="absensi">Absensi</string>
    <string name="location">Location</string>
    <string name="start_end">Masuk/Pulang</string>
    <string name="login">Login</string>
    <string name="login_username_hint">Masukkan Id karyawan Anda</string>
    <string name="login_password_hint">Masukkan Password Anda</string>
    <string name="login_login">Login</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="welcome_register_title">Belum punya akun</string>
    <string name="welcome_register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_name_app">Open Attendence</string>
    <string name="employe_id">Employee Id</string>
    <string name="nama">Masukan Nama karyawan</string>
    <string name="email">Email</string>
    <string name="register_name_hint">Masukan nama karyawan</string>
    <string name="register">Daftar</string>
    <string name="phone">Telephone</string>
    <string name="phone_hint">Masukan nomer telepon</string>
    <string name="address">Alamat</string>
    <string name="address_hint">Alamat</string>
    <string name="welcome_login">Login</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="have_account">Sudah punya akun</string>
    <string name="not_have_account">Sudah puny akun</string>
    <string name="update">Ubah</string>
    <string name="delete_employee">Delete Karyawan</string>
    <string name="delete_employee_sure">Anda yakin ingin menghapus karyawan?</string>
    <string name="success">Berhasil</string>
    <string name="edit_employee">Berhasil edit karyawan</string>
    <string name="register_employee">Berhasil daftar karyawan</string>
    <string name="onboarding_title_temp">Hello</string>
    <string name="onboarding_description_temp">Deskripsinya</string>
    <string name="onboarding_skip">Lewati</string>
    <string name="profile_decription">Description</string>
    <string name="data_diri">Data diri</string>
    <string name="register_phone_hint">Masukan nomer telepon</string>
    <string name="register_employeid_hint">Masukan id karyawan</string>
    <string name="register_email_hint">masukan email</string>
    <string name="add_admin">Daftarkan Admin</string>

</resources>